--- a/assets/main.css
+++ b/assets/main.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-flow: row-wrap;
   justify-content: flex-end;
+  align-items: baseline flex-start;
   background: linear-gradient(
     to right,
     #243b55,
@@ -28,6 +29,15 @@
 }
 .navigation li a:hover {
   background: rebeccapurple;
+}
+.navigation .logo{
+  font-size: large;
+  padding: 7.5px 10px 7.5px 10px;
+
+
+}
+.navigation .item{
+  padding: 10px;
 }
 /* responsive section  */
 @media all and (max-width: 800px) {
