--- a/assets/components/navbar.css
+++ b/assets/components/navbar.css
@@ -17,7 +17,6 @@ nav {
 a {
   color: white;
   text-decoration: none;
-  cursor: pointer;
 }
 .menu,
 .submenu {
@@ -26,9 +25,14 @@ a {
 .logo {
   font-size: 20px;
   padding: 7.5px 10px 7.5px 0;
+  cursor: pointer;
 }
 .item {
   padding: 10px;
+  cursor: pointer;
+}
+a:hover{
+  color:#ccc;
 }
 .item.button {
   padding: 9px 5px;
