--- a/assets/components/navbar.css
+++ b/assets/components/navbar.css
@@ -14,6 +14,7 @@ nav {
     ); 
   padding: 0 15px;
 }
+
 a {
   color: white;
   text-decoration: none;
@@ -149,7 +150,7 @@ a:hover{
   }
 }
 /* Desktop menu */
-@media all and (min-width: 960px) {
+@media all and (min-width: 1128px) {
   .menu {
     align-items: flex-start;
     flex-wrap: nowrap;
@@ -192,5 +193,9 @@ a:hover{
   }
   .submenu-active {
     border-radius: 0;
+  }
+  .container{
+    width: 80vw;
+    margin-left: 8vw;
   }
 }
