--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,4 +1,5 @@
 <nav>
+  <div class="container">
     <ul class="menu">
       <li class="logo"><a href="#">Robotics Club</a></li>
       <li class="item"><a href="#">Home</a></li>
@@ -26,6 +27,7 @@
       <li class="item button secondary"><a href="#">Contact-Us</a></li>
       <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
     </ul>
+  </div>
   </nav>
   <script>
     const toggle = document.querySelector(".toggle");
