--- a/components/footer.html
+++ b/components/footer.html
@@ -1,14 +1,30 @@
-<div class="row">
+<div class="row" id="main-footer">
   <div class="col">
-    A
+    <h2>Site Links</h2>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Events</a>
+    <a href="#">Gallary</a>
+    <a href="#">Contact</a>
   </div>
   <div class="col">
-    B
+    <img src="/images/robotics.webp" alt="Robotics Club Logo">
+    <h1>Robotics Club</h1>
+    <p>IOE, Purwanchal Campus</p>
+    <p>Dharan</p>
   </div>
   <div class="col">
-    C
+    <h2>External Links</h2>
+    <a href="#">IOE, Purwanchal Campus</a>
+    <a href="#">IOE</a>
+    <a href="#">TU</a>
+    <a href="#">#</a>
+    <a href="#">#</a>
   </div>
 </div>
 <div class="row">
 
+</div>
+<div class="row">
+  Robotics Club 2022
 </div>
