--- a/assets/main.css
+++ b/assets/main.css
@@ -7,4 +7,14 @@
   list-style: none;
   box-sizing: border-box;
   font-family: 'Radio Canada', sans-serif;
+  z-index: 1;
+}
+
+body {
+  background-color: rgb(20, 20, 20);
+}
+
+div.container {
+  margin: 0 auto;
+  max-width: 1200px;
 }
