--- a/components/navbar.html
+++ b/components/navbar.html
@@ -31,6 +31,7 @@
       <li class="item button secondary"><a href="#">Contact-Us</a></li>
       <li class="toggle"><a href="#"><i class="fas fa-bars"></i></a></li>
     </ul>
+
   </div>
 </nav>
 <script>
@@ -87,3 +88,4 @@
   }
   document.addEventListener("click", closeSubmenu, false);
 </script>
+<!-- nav body  -->
