--- a/lib/main.css
+++ b/lib/main.css
@@ -1,4 +1,7 @@
+@import url(./css/navbar.css);
+@import url(./css/footer.css);
 @import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@500&display=swap');
+
 
 * {
   margin: 0;
