--- a/per-page/index/css/fullpage.css
+++ b/per-page/index/css/fullpage.css
@@ -1,18 +1,15 @@
-.fullpage{
-    background-color: #000000;  
+div.fullpage {
+  display: flex;
+  flex-flow: wrap;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10vh 10vw;
+}
 
-    min-height: 100vh;
-}
-.intro h1{
-    color: brown;
-}
-.intro h1 #one{
-    color: blue;
-}
-.intro h1 #two{
-    color: green;
-}
-.intro{
-    display: flex;
-    padding: 10% 10%;
+.intro>h1{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 2rem;
+  color: white;
 }
