--- a/per-page/index/index.css
+++ b/per-page/index/index.css
@@ -1,4 +1,4 @@
 @import url(./css/fullpage.css);
 @import url(./css/fullpage1.css);
 @import url(./css/fullpage2.css);
-
+@import url(./css/part4.css);
