--- a/lib/css/navbar.css
+++ b/lib/css/navbar.css
@@ -1,8 +1,64 @@
-nav {
-  position: sticky;
-  position: -webkit-sticky;
-  background: black;
-  padding: 0 15px;
+.load {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: hsl(0, 0%, 0%);
+  visibility: hidden;
+  opacity: 0;
+  animation: load;
+  animation-duration: 1.5s;
+  z-index: 9999;
+}
+
+@keyframes load {
+  0% {
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  80% {
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  100% {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+.load img {
+  position: fixed;
+}
+
+.loader {
+  position: fixed;
+  width: 200px;
+  height: 200px;
+  border: 5px solid;
+  border-color: #FF3D00 transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
+
+nav.junk {
+  position: static;
+  height: 70px;
+  z-index: 1;
 }
 
 a {
@@ -47,9 +103,7 @@ nav>div>ul>li>a.logo {
 }
 
 .menu li.subitem a {
-  min-width: 200px;
-  padding: 12px 16px;
-  
+  padding: 15px;
 }
 
 .toggle {
