--- a/lib/main.css
+++ b/lib/main.css
@@ -1,6 +1,5 @@
-@import url(./css/loader.css);
-@import url(./css/navbar.css);
-@import url(./css/footer.css);
+@import url(/lib/css/navbar.css);
+@import url(/lib/css/footer.css);
 @import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@500&display=swap');
 
 
