--- a/per-page/index/css/part4.css
+++ b/per-page/index/css/part4.css
@@ -1,52 +1,3 @@
-@import 'https://fonts.googleapis.com/css?family=Libre+Franklin:400,700';
-
-.containera {
-    background: black;
-    width: 900px;
-    height: 650px;
-    margin: 5% auto;
-    /* box-shadow: 0px 0px 10px #C8C7D9; */
-    position: relative;
-  }
-.containera .map {
-  width: 45%;
-  float: left;
-}
-.containera .contact-form {
-  width: 53%;
-  margin-left: 2%;
-  float: left;
-}
-.containera .contact-form .title {
-  font-size: 2.5em;
-  font-family: "Libre Franklin", sans-serif;
-  font-weight: 700;
-  color: #242424;
-  margin: 5% 8%;
-}
-.containera .contact-form .subtitle {
-  font-size: 1.2em;
-  font-weight: 400;
-  margin: 0 4% 5% 8%;
-}
-.containera .contact-form input,
-.containera .contact-form textarea {
-  width: 330px;
-  padding: 3%;
-  margin: 2% 8%;
-  color: #242424;
-  border: 1px solid #B7B7B7;
-}
-.containera .contact-form input::placeholder,
-.containera .contact-form textarea::placeholder {
-  color: #242424;
-}
-.containera .contact-form .btn-send {
-  background: #A383C9;
-  width: 180px;
-  height: 60px;
-  color: #F8F8F8;
-  font-weight: 700;
-  margin: 2% 8%;
-  border: none;
+.part4{
+    min-height: 100vh;
 }
