--- a/per-page/index/css/part1.css
+++ b/per-page/index/css/part1.css
@@ -36,14 +36,14 @@
 
 .part1 h1 {
   font-size: 70px;
-  color: black;
+  color: white;
   text-align: center;
   text-shadow: none;
 
 }
 
 .part1 h2 {
-  color: black;
+  color: white;
   text-align: center;
 }
 
